<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <!-- 美味信息的容器 -->

    <LinearLayout
        android:id="@+id/ll_item_detail_arguments_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#eee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="#FA3636"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/tv_item_arguments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/info_title"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eee" />

        <!-- 供应商，保质期，产地，生产日期的容器 -->

        <RelativeLayout
            android:id="@+id/rl_item_detail_arguments_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="10dp" >

            <TextView
                android:id="@+id/info0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView" />

            <TextView
                android:id="@+id/info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/info0"
                android:layout_alignBottom="@+id/info0"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:text="@string/textView" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/info0"
                android:layout_below="@+id/info0"
                android:layout_marginTop="10dp"
                android:text="@string/textView" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/info2"
                android:layout_alignBottom="@+id/info2"
                android:layout_alignRight="@+id/info1"
                android:text="@string/textView" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#eee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#FA3636"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/tv_comments_total_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee" />

    <ListView
        android:id="@+id/listView_item_detail_comments"
        android:layout_width="match_parent"
        android:layout_height="340dp" >
    </ListView>

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_more_arguments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="10dp"
            android:drawableLeft="@drawable/icon_order"
            android:text="@string/more" />
    </RelativeLayout>
</LinearLayout>